src/test/deca/codegen/invalid/resultats/var1-ima.res
  ** IMA ** ERREUR ** Ligne 45 : 
    WINT avec R1 indefini
